backtracking modification to code --> refer to kunal for other unqiue logic